--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>NgBooksStore</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/icons8-book-64.png">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/antd/5.6.1/antd.min.js" integrity="sha512-ntadQWzi1DanAX2iG63AE1zDOOXjMRSD/QKGOME+bfqgJvejLuZ6LHghHCuDNOmsxG10tH2PEgRNT6YwHiXefg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 </head>
 <body>
   <app-root></app-root>
